# learn-rust

./: Cargo.toml  LICENSE  README.md
actix_web_server/: Cargo.toml
actix_web_server/src/: main.rs
advanced_features/src/: advanced_functions_and_closures.rs  advanced_traits.rs  advanced_types.rs  macros.rs  main.rs  unsafe_rust.rs
cmp/: Cargo.toml
cmp/src/: main.rs
collections/: Cargo.toml
collections/src/: binary_heap.rs  hashmap.rs  hashmap_btreemap.rs  hashset_btreeset.rs  linkedlist.rs  main.rs  string.rs  vector.rs
comments/src/: lib.rs  main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs  message_passing.rs  shared_state.rs  threads.rs
control_flow/src/: main.rs
data_types/: Cargo.toml
data_types/src/: main.rs  string.rs
enums/src/: main.rs  match_control_flow_operator.rs
env/src/: main.rs
error-handling/: Cargo.toml
error-handling/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs  recoverable_errors_with_result.rs  unrecoverable_errors_with_panic.rs
example_actix_web_server/: Cargo.toml
example_actix_web_server/src/: main.rs
example_minigrep/: Cargo.toml
example_minigrep/src/: main.rs
example_restaurant/src/: lib.rs
example_web_server/: data.json
example_web_server/src/: lib.rs  main.rs
examples/actix_web_server/: Cargo.toml
examples/web_server/: Cargo.toml
functions/src/: main.rs
generics/src/: generics.rs  lifetimes.rs  traits.rs
generics_traits_lifetimes/src/: generics.rs  lifetimes.rs  main.rs  onwership.rs  traits.rs
guessing_game/src/: dev.rs
hello_cargo/src/: main.rs
hello_rust/src/: comments.rs  main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
how_functions_work/: Cargo.toml
iterators_closures/src/: closures.rs  iterators.rs  main.rs
learn_cargo/: Cargo.toml
learn_cargo/src/: lib.rs
more_about_cargo/: Cargo.toml
more_about_cargo/src/: lib.rs
packages_crate_modules/: Cargo.toml
recipes/: Cargo.toml
restaurant/: Cargo.toml
smart_points/: Cargo.toml
src/: main.rs
std_library/: Cargo.toml
variables_and_mutability/: Cargo.toml
web_server/: Cargo.toml
workspace/: Cargo.toml
writing_automated_tests/: Cargo.toml
(+67 files in other folders)
