[package]
name = "actix_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
json = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-cors = "0.6.2"
uuid = {version = "1.1.2", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
fake = { version = "2.5", features = ['uuid', 'random_color'] } 
rand = "0.8"
actix-multipart = "0.6.0"
futures = "0.3.27"
# rs_openai = "0.3.3"
dotenvy = "0.15.7"
tokio = "1.27.0"
actix-web-lab = "0.19.1"
rs_openai = {path = "../../../open-source/rs-openai/rs_openai"}

# cargo install cargo-watch
# cargo watch -x run